logo alignment issue fix

--- a/assets/css/opedic.css
+++ b/assets/css/opedic.css
@@ -93,10 +93,27 @@ img::-moz-selection {
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
     .brand-logo {
-        width: 274px;
-        height: 68px;
+        margin-left: 60px;
+        margin-top: -48px;
     }
 }
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+    .brand-logo {
+        left: -154px;
+        position: relative;
+    }
+
+    .fixed-top{
+        top: 46px;!important;
+    }
+
+}
+
+
+
 
 #mainNav {
     /*padding-top: 1rem;
@@ -940,7 +957,9 @@ section.comments {
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
-    /* Styles */
+    .fixed-top {
+        top: 88px;
+    }
 }
 
 /* Smartphones (landscape) ----------- */
@@ -1010,7 +1029,6 @@ only screen and (min-device-pixel-ratio : 1.5) {
 
 .banner-icon{
     display: inline-block;
-    margin-bottom: 10px;
     transition: 0.5s;
 }
 
@@ -1121,7 +1139,6 @@ a.scrollup i:hover {
 
 
 
-
 .card  {
     border:none;
     background-color:transparent!important;
@@ -1135,6 +1152,7 @@ a.scrollup i:hover {
 .accordion .card-title
 {
     font-weight: 600;
+    text-decoration: none;
 }
 
 .card-header{
